<resources>
    <string name="app_name">Liber</string>
    <string name="logo_name">Liber</string>

    <!--    strings for onboarding screen-->

    <string name="first_slide_title"> Welcome to Liber! </string>
    <string name="second_slide_title"> Maintain Your Virtual Bookshelf </string>
    <string name="third_slide_title"> Search For Books </string>

    <string name="first_slide_desc"> Something very magical can happen when you read a book. </string>
    <string name="second_slide_desc"> Catalog the books you read in appropriate shelves. </string>
    <string name="third_slide_desc"> So many books, so little time. Search for books you would like, get to know about books you are curious about. </string>

    <string name="lets_get_started"> LET\'S GET STARTED! </string>
    <string name="skip_btn"> SKIP </string>

    <!--    strings for navigation bar-->
    <string name="my_books"> My Books </string>
    <string name="search"> Search </string>
    <string name="stats"> Stats </string>
    <string name="profile"> Profile </string>


    <!--    strings for welcome screen-->

    <string name="login_heading"> Welcome to Liber! </string>
    <string name="login_desc"> Please sign up to Liber and create your own profile if you already haven\'t. Otherwise, simply log in! </string>
    <string name="login_btn"> LOGIN </string>
    <string name="signup_btn"> SIGN UP </string>

    <!--    strings for login screen-->

    <string name="login_screen_heading"> LOGIN </string>
    <string name="enter_username"> Enter Username </string>
    <string name="enter_password"> Enter Password </string>
    <string name="remember_me"> Remember Me </string>

    <!--    strings for signup screen-->

    <string name="signup_screen_heading"> CREATE ACCOUNT </string>
    <string name="enter_full_name"> Enter Full Name </string>
    <string name="enter_email"> Enter Email Address </string>
    <string name="next_btn"> NEXT </string>

    <!--    my books fragment strings-->

    <string name="heading">Hello</string>
    <string name="sub_heading">YOUR BOOKSHELF</string>

    <!--    read/current/to-read fragment strings-->
    <string name="read_heading">Your Read Shelf</string>
    <string name="curread_heading">Your Currently Reading Shelf</string>
    <string name="toread_heading">Your To-Read Shelf</string>

    <!--    profile fragment string-->
    <string name="profile_fragment_logout">Log Out</string>
    <string name="profile_user_title">User Information</string>
    <string name="profile_user_full">Full Name:</string>
    <string name="profile_user_name">User Name:</string>
    <string name="profile_user_email">Email:</string>
    <string name="profile_user_bday">Birthday:</string>
    <string name="profile_app_name">Liber</string>


    <!--    book row design xml string-->
    <string name="remove_btn">Remove From Shelf</string>

    <!--    search fragment string-->
    <string name="search_fragment_hint">Enter Book Titles..</string>
    <string name="search_btn">SEARCH</string>
    <string name="message">Books You Search For Will Appear Here!</string>
    <string name="search_heading">Explore The Books You Are Looking For Here!</string>

    <!--  add books fragment string -->
    <string name="read_btn">READ</string>
    <string name="curread_btn">CURRENTLY READING</string>
    <string name="toread_btn">WANT TO READ</string>
    <string name="Shelf">ADD TO SHELF:</string>

    <!--  book row design read string -->
    <string name="date_text">Date Read:</string>

    <!--  add books to read fragment string -->
    <string name="instr">Rate This Book and Tell Us When You Read It! </string>
    <string name="add_btn"> Add To Shelf </string>
    <string name="set_read_date"> Set Read Date </string>
    <string name="book_title"> Book Title: </string>
    <string name="author_title"> Author: </string>
    <string name="rating_title"> Rate: </string>

    <!--  stats fragment string -->
    <string name="challenge_heading">READING CHALLENGE</string>
    <string name="empty_heading">You\'ve Not Set Your Goal Yet.</string>
    <string name="set_btn_text">SET GOAL</string>
    <string name="edit_btn_text">EDIT GOAL</string>
    <string name="hint"># Books</string>
    <string name="month_heading"> Books Read This Month: </string>


</resources>
