<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mybooks"
        android:icon="@drawable/bottom_nav_book_icon"
        android:title="@string/my_books"
        app:cnb_backgroundColor="#5B5BDD"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/bottom_nav_search_icon"
        android:title="@string/search"
        app:cnb_backgroundColor="#5B5BDD"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/stats"
        android:icon="@drawable/bottom_nav_stats_icon"
        android:title="@string/stats"
        app:cnb_backgroundColor="#5B5BDD"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/bottom_nav_profile_icon"
        android:title="@string/profile"
        app:cnb_backgroundColor="#5B5BDD"
        app:cnb_textColor="@color/white" />

</menu>